<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>project-framework</module>
        <module>project-es</module>
        <module>project-ai</module>
        <module>project-test</module>
        <module>project-web</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.12</version>
        <relativePath/>
    </parent>
    <groupId>org.huangyalong</groupId>
    <artifactId>project</artifactId>
    <version>${revision}</version>
    <name>${project.artifactId}</name>
    <description>这是一个构建 JAVA 项目的模板库</description>
    <properties>
        <!-- Maven 相关 -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.locales>zh_CN</project.build.locales>
        <project.build.jdk>${java.version}</project.build.jdk>
        <!-- 项目相关 -->
        <mybatis-flex.version>1.10.5</mybatis-flex.version>
        <hutool.version>5.8.38</hutool.version>
        <es.version>7.17.8</es.version>
        <ee.version>2.1.0</ee.version>
        <agents-flex.version>1.1.7</agents-flex.version>
        <openapi.version>1.8.0</openapi.version>
        <revision>0.0.1-SNAPSHOT</revision>
        <!-- 打包跳过测试 -->
        <skipTests>true</skipTests>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.mybatis-flex</groupId>
                <artifactId>mybatis-flex-dependencies</artifactId>
                <version>${mybatis-flex.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.dromara.easy-es</groupId>
                <artifactId>easy-es-boot-starter</artifactId>
                <version>${ee.version}</version>
            </dependency>
            <dependency>
                <groupId>org.elasticsearch.client</groupId>
                <artifactId>elasticsearch-rest-high-level-client</artifactId>
                <version>${es.version}</version>
            </dependency>
            <dependency>
                <groupId>org.elasticsearch.client</groupId>
                <artifactId>elasticsearch-rest-client</artifactId>
                <version>${es.version}</version>
            </dependency>
            <dependency>
                <groupId>org.elasticsearch</groupId>
                <artifactId>elasticsearch</artifactId>
                <version>${es.version}</version>
            </dependency>
            <dependency>
                <groupId>com.agentsflex</groupId>
                <artifactId>agents-flex-spring-boot-starter</artifactId>
                <version>${agents-flex.version}</version>
            </dependency>
            <dependency>
                <groupId>com.agentsflex</groupId>
                <artifactId>agents-flex-llm-ollama</artifactId>
                <version>${agents-flex.version}</version>
            </dependency>
            <dependency>
                <groupId>org.huangyalong</groupId>
                <artifactId>project-framework</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.huangyalong</groupId>
                <artifactId>project-es</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.huangyalong</groupId>
                <artifactId>project-ai</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.huangyalong</groupId>
                <artifactId>project-test</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-webmvc-core</artifactId>
                <version>${openapi.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <includeSystemScope>true</includeSystemScope>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <pluginRepositories>
        <pluginRepository>
            <id>aliyunmaven</id>
            <name>阿里云公共仓库</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
    <repositories>
        <repository>
            <id>aliyunmaven</id>
            <name>阿里云公共仓库</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
